fixing the alignments

--- a/client/scss/main.scss
+++ b/client/scss/main.scss
@@ -256,7 +256,7 @@ footer img {
 		text-align:center !important
 	}
 	nav .container{
-		padding:0 30px
+		padding:0 3code0px
 	}
 }
 
